--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GitHubApi</string>
+    <string name="enterLanguage">Enter Language</string>
+    <string name="searchGitHub">Search GitHub</string>
+    <string name="pleaseWait">Please wait...</string>
 </resources>
