--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,14 @@
+<!--
+  ~ Created by Aditya on 9/4/17 11:29 PM
+  ~ Copyright (c) 2017 All rights reserved.
+  ~
+  ~ Last modified 9/4/17 11:28 PM
+  -->
+
 <resources>
     <string name="app_name">GitHubApi</string>
     <string name="enterLanguage">Enter Language</string>
     <string name="searchGitHub">Search GitHub</string>
     <string name="pleaseWait">Please wait...</string>
+    <string name="no_repo_found">No repository found for the entered language.</string>
 </resources>
